[Fix] Overflow in portfolio card

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -233,6 +233,7 @@ a, a:hover {
 
   .card-body {
     height: 150px;
+    overflow-y: hidden;
   }
 }
 
